[package]
name = "taskly"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
time = { version = "0.3.37", features = [
    "local-offset",
    "serde",
    "formatting",
    "parsing",
] }
